--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -15,6 +15,6 @@
     </head>
     <body>
         <canvas id=canvas width=1200 height=800></canvas>
-        
+        <script src="main.js"></script>
     </body>
 </html>
