--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -11,7 +11,8 @@
                 border: 1px solid black;
             }
         </style>
-        <script src="https://raw.githubusercontent.com/Kaczo24/Stuff/master/dLib/dLib.js"></script>
+        <!-- <script src="https://raw.githubusercontent.com/Kaczo24/Stuff/master/dLib/dLib.js"></script> -->
+        <script src="https://raw.githubusercontent.com/Kaczo24/kaczo24.github.io/main/dLib/dLib.js"></script>
     </head>
     <body>
         <canvas id=canvas width=1200 height=800></canvas>
