Cell Machina - grid done

--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -11,11 +11,11 @@
                 border: 1px solid black;
             }
         </style>
-        <!-- <script src="https://raw.githubusercontent.com/Kaczo24/Stuff/master/dLib/dLib.js"></script> -->
-        <script src="https://raw.githubusercontent.com/Kaczo24/kaczo24.github.io/main/dLib/dLib.js"></script>
+        <script src="dLib.js"></script>
     </head>
     <body>
         <canvas id=canvas width=1200 height=800></canvas>
+        <p id=constLog></p>
         <script src="main.js"></script>
     </body>
 </html>
