--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -12,6 +12,7 @@
             }
         </style>
         <script src="dLib.js"></script>
+        <script src="defaultSettings.js"></script>
     </head>
     <body>
         <canvas id=canvas width=1200 height=800></canvas>
