--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -13,6 +13,7 @@
         </style>
         <script src="dLib.js"></script>
         <script src="defaultSettings.js"></script>
+        <script src="cell.js"></script>
     </head>
     <body>
         <canvas id=canvas width=1200 height=800></canvas>
