--- a/PSI_ZAD/zad_3/index.html
+++ b/PSI_ZAD/zad_3/index.html
@@ -13,9 +13,9 @@
             <input type="color" value="#c4c4cb" onchange="ChangeFontColorHead(event)" id=FontColorHead><br>
 
             <label>Tło tekstu:</label>
-            <input type="color" value="#5A5A5A" onchange="ChangeBgColorText(event)"   id=BgColorText><br>
+            <input type="color" value="#ffffff" onchange="ChangeBgColorText(event)"   id=BgColorText><br>
             <label>Kolor tekstu:</label>
-            <input type="color" value="#c4c4cb" onchange="ChangeFontColorText(event)" id=FontColorText><br>
+            <input type="color" value="#000000" onchange="ChangeFontColorText(event)" id=FontColorText><br>
         </div>
 		<div id="PAGE">
 			<div class="hed HEADER">
