--- a/PSI_ZAD/zad_3/art0.html
+++ b/PSI_ZAD/zad_3/art0.html
@@ -6,8 +6,25 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<div id="panel" onmouseenter="event.currentTarget.style.left = '0'" onmouseleave="event.currentTarget.style.left = '-260px'">
+            <label>Tło nagłówka:</label>
+            <input type="color" value="#5A5A5A" onchange="ChangeBgColorHead(event)"   id=BgColorHead><br>
+            <label>Kolor nagłówka:</label>
+            <input type="color" value="#c4c4cb" onchange="ChangeFontColorHead(event)" id=FontColorHead><br>
+
+            <label>Tło tekstu:</label>
+            <input type="color" value="#ffffff" onchange="ChangeBgColorText(event)"   id=BgColorText><br>
+            <label>Kolor tekstu:</label>
+            <input type="color" value="#000000" onchange="ChangeFontColorText(event)" id=FontColorText><br>
+            <label>Rozmiar tekstu:</label>
+            <input type="range" min="50" value="100" max="200" onChange="ChangeFontSize(event);" id=FontSize><br>
+
+            <label>Czcionka:</label>
+            <select id="FontFamily" onChange="ChangeFontFamily(event);">
+            </select><br>
+        </div>
 		<div id="PAGE">
-			<div class="hed">
+			<div class="hed HEADER">
 				<div class="name">
 					<h1>Szachy</h1>
 					<h3>w końcu to też sport</h3>
@@ -20,19 +37,22 @@
 					<a target="_top" href="index.html">Contact</a>
 				</div>
 			</div>
-			<img class="Imain" src="chess.webp"/>
-			<div class="art2">
-				<h2>Chess Game</h2>
-				<h5>Wiki Pedia</h5>
-				<p><b>Chess is a two-player strategy board game played on a checkered board with 64 squares arranged in an 8×8 grid. Played by millions of people worldwide, chess is believed to be derived from the Indian game chaturanga sometime before the 7th century. Chaturanga is also the likely ancestor of the Eastern strategy games xiangqi (Chinese chess), janggi (Korean chess), and shogi (Japanese chess). Chess reached Europe by the 9th century, due to the Umayyad conquest of Hispania.</b></p>
-				<p>Play involves no hidden information. Each player begins with 16 pieces: one king, one queen, two rooks, two knights, two bishops, and eight pawns. Each piece type moves differently, with the most powerful being the queen and the least powerful the pawn. The objective is to checkmate the opponent's king by placing it under an inescapable threat of capture. To this end, a player's pieces are used to attack and capture the opponent's pieces, while supporting one another. During the game, play typically involves exchanging pieces for the opponent's similar pieces, and finding and engineering opportunities to trade advantageously or to get a better position. In addition to checkmate, a player wins the game if the opponent resigns, or, in a timed game, runs out of time. There are also several ways that a game can end in a draw.</p>
-				<p>The first generally recognized World Chess Champion, Wilhelm Steinitz, claimed his title in 1886. Since 1948, the World Championship has been regulated by the Fédération Internationale des Échecs (FIDE), the game's international governing body. FIDE also awards life-time master titles to skilled players, the highest of which is Grandmaster (GM). Many national chess organizations have a title system of their own. FIDE also organizes the Women's World Championship, the World Junior Championship, the World Senior Championship, the Blitz and Rapid World Championships, and the Chess Olympiad, a popular competition among international teams. FIDE is a member of the International Olympic Committee, which can be considered recognition of chess as a sport.[1] Several national sporting bodies (e.g. the Spanish Consejo Superior de Deportes[2]) also recognize chess as a sport. Chess was included in the 2006 and 2010 Asian Games. There is also a Correspondence Chess World Championship and a World Computer Chess Championship. Online chess has opened amateur and professional competition to a wide and varied group of players.</p>
+			<div id=TEXT>
+				<img class="Imain" src="chess.webp"/>
+				<div class="art2">
+					<h2>Chess Game</h2>
+					<h5>Wiki Pedia</h5>
+					<p><b>Chess is a two-player strategy board game played on a checkered board with 64 squares arranged in an 8×8 grid. Played by millions of people worldwide, chess is believed to be derived from the Indian game chaturanga sometime before the 7th century. Chaturanga is also the likely ancestor of the Eastern strategy games xiangqi (Chinese chess), janggi (Korean chess), and shogi (Japanese chess). Chess reached Europe by the 9th century, due to the Umayyad conquest of Hispania.</b></p>
+					<p>Play involves no hidden information. Each player begins with 16 pieces: one king, one queen, two rooks, two knights, two bishops, and eight pawns. Each piece type moves differently, with the most powerful being the queen and the least powerful the pawn. The objective is to checkmate the opponent's king by placing it under an inescapable threat of capture. To this end, a player's pieces are used to attack and capture the opponent's pieces, while supporting one another. During the game, play typically involves exchanging pieces for the opponent's similar pieces, and finding and engineering opportunities to trade advantageously or to get a better position. In addition to checkmate, a player wins the game if the opponent resigns, or, in a timed game, runs out of time. There are also several ways that a game can end in a draw.</p>
+					<p>The first generally recognized World Chess Champion, Wilhelm Steinitz, claimed his title in 1886. Since 1948, the World Championship has been regulated by the Fédération Internationale des Échecs (FIDE), the game's international governing body. FIDE also awards life-time master titles to skilled players, the highest of which is Grandmaster (GM). Many national chess organizations have a title system of their own. FIDE also organizes the Women's World Championship, the World Junior Championship, the World Senior Championship, the Blitz and Rapid World Championships, and the Chess Olympiad, a popular competition among international teams. FIDE is a member of the International Olympic Committee, which can be considered recognition of chess as a sport.[1] Several national sporting bodies (e.g. the Spanish Consejo Superior de Deportes[2]) also recognize chess as a sport. Chess was included in the 2006 and 2010 Asian Games. There is also a Correspondence Chess World Championship and a World Computer Chess Championship. Online chess has opened amateur and professional competition to a wide and varied group of players.</p>
+				</div>
 			</div>
-			<div class="end">
+			<div class="end HEADER">
 				<div class="b1">Copyright by Mi 2020</div>
 				<div class="b2">Template by: Mateusz Kaczkowski</div>
 			</div>
 		</div>
+		<script src="main.js"></script>
 	</body>
 </html>
 
