--- a/PSI_ZAD/zad_3/art3.html
+++ b/PSI_ZAD/zad_3/art3.html
@@ -6,8 +6,25 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<div id="panel" onmouseenter="event.currentTarget.style.left = '0'" onmouseleave="event.currentTarget.style.left = '-260px'">
+            <label>Tło nagłówka:</label>
+            <input type="color" value="#5A5A5A" onchange="ChangeBgColorHead(event)"   id=BgColorHead><br>
+            <label>Kolor nagłówka:</label>
+            <input type="color" value="#c4c4cb" onchange="ChangeFontColorHead(event)" id=FontColorHead><br>
+
+            <label>Tło tekstu:</label>
+            <input type="color" value="#ffffff" onchange="ChangeBgColorText(event)"   id=BgColorText><br>
+            <label>Kolor tekstu:</label>
+            <input type="color" value="#000000" onchange="ChangeFontColorText(event)" id=FontColorText><br>
+            <label>Rozmiar tekstu:</label>
+            <input type="range" min="50" value="100" max="200" onChange="ChangeFontSize(event);" id=FontSize><br>
+
+            <label>Czcionka:</label>
+            <select id="FontFamily" onChange="ChangeFontFamily(event);">
+            </select><br>
+        </div>
 		<div id="PAGE">
-			<div class="hed">
+			<div class="hed HEADER">
 				<div class="name">
 					<h1>Szachy</h1>
 					<h3>w końcu to też sport</h3>
@@ -20,19 +37,22 @@
 					<a target="_top" href="index.html">Contact</a>
 				</div>
 			</div>
-			<img class="Imain" src="gary.png"/>
-			<div class="art2">
-				<h2>Garry Kasparov</h2>
-				<h5>Wiki Pedia</h5>
-				<p><b>Garry Kimovich Kasparov (Russian: Га́рри Ки́мович Каспа́ров, Russian pronunciation: [ˈɡarʲɪ ˈkʲiməvʲɪtɕ kɐˈsparəf]; born Garik Kimovich Weinstein,[2] 13 April 1963) is a Russian chess grandmaster, former World Chess Champion, writer, and political activist, whom many consider to be the greatest chess player of all time.[3] From 1986 until his retirement in 2005, Kasparov was ranked world No. 1 for 225 out of 228 months and 255 months overall for his career. His peak rating of 2851,[4] achieved in 1999, was the highest recorded until being surpassed by Magnus Carlsen in 2013. Kasparov also holds records for consecutive professional tournament victories (15) and Chess Oscars (11).</b></p>
-				<p>Kasparov became the youngest ever undisputed World Chess Champion in 1985 at age 22 by defeating then-champion Anatoly Karpov.[5] He held the official FIDE world title until 1993, when a dispute with FIDE led him to set up a rival organization, the Professional Chess Association.[6] In 1996 he became the first world champion to lose a match to a computer under standard time controls, when he lost to the IBM supercomputer Deep Blue in a highly publicized match. He continued to hold the "Classical" World Chess Championship until his defeat by Vladimir Kramnik in 2000. In spite of losing the title, he continued winning tournaments and was the world's highest-rated player when he retired from professional chess in 2005.</p>
-				<p>After Kasparov retired, he devoted his time to politics and writing. He formed the United Civil Front movement, and joined as a member of The Other Russia, a coalition opposing the administration and policies of Vladimir Putin. In 2008, he announced an intention to run as a candidate in that year's Russian presidential race, but failure to find a sufficiently large rental space to assemble the number of supporters that is legally required to endorse such a candidacy led him to withdraw. Kasparov blamed "official obstruction" for the lack of available space.[7] He is widely regarded in the West as a symbol of opposition to Putin,[8] and he was barred from the presidential ballot[7] as the political climate in Russia makes it difficult for opposition candidates to organize.[9][10]</p>
+			<div id=TEXT>
+				<img class="Imain" src="gary.png"/>
+				<div class="art2">
+					<h2>Garry Kasparov</h2>
+					<h5>Wiki Pedia</h5>
+					<p><b>Garry Kimovich Kasparov (Russian: Га́рри Ки́мович Каспа́ров, Russian pronunciation: [ˈɡarʲɪ ˈkʲiməvʲɪtɕ kɐˈsparəf]; born Garik Kimovich Weinstein,[2] 13 April 1963) is a Russian chess grandmaster, former World Chess Champion, writer, and political activist, whom many consider to be the greatest chess player of all time.[3] From 1986 until his retirement in 2005, Kasparov was ranked world No. 1 for 225 out of 228 months and 255 months overall for his career. His peak rating of 2851,[4] achieved in 1999, was the highest recorded until being surpassed by Magnus Carlsen in 2013. Kasparov also holds records for consecutive professional tournament victories (15) and Chess Oscars (11).</b></p>
+					<p>Kasparov became the youngest ever undisputed World Chess Champion in 1985 at age 22 by defeating then-champion Anatoly Karpov.[5] He held the official FIDE world title until 1993, when a dispute with FIDE led him to set up a rival organization, the Professional Chess Association.[6] In 1996 he became the first world champion to lose a match to a computer under standard time controls, when he lost to the IBM supercomputer Deep Blue in a highly publicized match. He continued to hold the "Classical" World Chess Championship until his defeat by Vladimir Kramnik in 2000. In spite of losing the title, he continued winning tournaments and was the world's highest-rated player when he retired from professional chess in 2005.</p>
+					<p>After Kasparov retired, he devoted his time to politics and writing. He formed the United Civil Front movement, and joined as a member of The Other Russia, a coalition opposing the administration and policies of Vladimir Putin. In 2008, he announced an intention to run as a candidate in that year's Russian presidential race, but failure to find a sufficiently large rental space to assemble the number of supporters that is legally required to endorse such a candidacy led him to withdraw. Kasparov blamed "official obstruction" for the lack of available space.[7] He is widely regarded in the West as a symbol of opposition to Putin,[8] and he was barred from the presidential ballot[7] as the political climate in Russia makes it difficult for opposition candidates to organize.[9][10]</p>
+				</div>
 			</div>
-			<div class="end">
+			<div class="end HEADER">
 				<div class="b1">Copyright by Mi 2020</div>
 				<div class="b2">Template by: Mateusz Kaczkowski</div>
 			</div>
 		</div>
+		<script src="main.js"></script>
 	</body>
 </html>
 
