--- a/PSI_ZAD/zad_3/index.html
+++ b/PSI_ZAD/zad_3/index.html
@@ -16,6 +16,12 @@
             <input type="color" value="#ffffff" onchange="ChangeBgColorText(event)"   id=BgColorText><br>
             <label>Kolor tekstu:</label>
             <input type="color" value="#000000" onchange="ChangeFontColorText(event)" id=FontColorText><br>
+            <label>Rozmiar tekstu:</label>
+            <input type="range" min="50" value="100" max="200" onChange="ChangeFontSize(event);" id=FontSize><br>
+
+            <label>Czcionka:</label>
+            <select id="FontFamily" onChange="ChangeFontFamily(event);">
+            </select><br>
         </div>
 		<div id="PAGE">
 			<div class="hed HEADER">
@@ -30,30 +36,32 @@
 					<a target="_top" href="index.html">Authors</a>
 					<a target="_top" href="index.html">Contact</a>
 				</div>
-			</div>
-			<img class="Imain" src="chess.webp"/>
-			<div class="articles">
-				<div class="art">
-					<img src="chessAI.jpg"/>
-					<p>Deep Blue was a chess-playing computer developed by IBM. It is known as the first computer to win both a chess match against a world champion.</p>
-					<a href="art1.html"><h4>Read More >></h4></a>
-				</div>
-				<div class="art">
-					<img src="chessMoves.jpg"/>
-					<p>Castling is a move in the game of chess involving the king and a rook. It is the only move in chess in which a player moves two pieces in the same move.</p>
-					<a href="art2.html"><h4>Read More >></h4></a>
-				</div>
-				<div class="art">
-					<img src="chessPlay.jpg"/>
-					<p>Garry Kimovich Kasparov is a Russian chess grandmaster, former World Chess Champion, whom many consider to be the greatest chess player of all time.</p>
-					<a href="art3.html"><h4>Read More >></h4></a>
-				</div>
-			</div>
-			<div class="art2">
-				<h2>Chess Game</h2>
-				<p>Chess is a two-player strategy board game played on a checkered board with 64 squares arranged in an 8×8 grid. Played by millions of people worldwide, chess is believed to be derived from the Indian game chaturanga sometime before the 7th century. Chaturanga is also the likely ancestor of the Eastern strategy games xiangqi (Chinese chess), janggi (Korean chess), and shogi (Japanese chess).</p>
-				<a href="art0.html"><h4>Read More >></h4></a>
-			</div>
+            </div>
+            <div id=TEXT>
+			    <img class="Imain" src="chess.webp"/>
+			    <div class="articles">
+			    	<div class="art">
+			    		<img src="chessAI.jpg"/>
+			    		<p>Deep Blue was a chess-playing computer developed by IBM. It is known as the first computer to win both a chess match against a world champion.</p>
+			    		<a href="art1.html"><h4>Read More >></h4></a>
+			    	</div>
+			    	<div class="art">
+			    		<img src="chessMoves.jpg"/>
+			    		<p>Castling is a move in the game of chess involving the king and a rook. It is the only move in chess in which a player moves two pieces in the same move.</p>
+			    		<a href="art2.html"><h4>Read More >></h4></a>
+			    	</div>
+			    	<div class="art">
+			    		<img src="chessPlay.jpg"/>
+			    		<p>Garry Kimovich Kasparov is a Russian chess grandmaster, former World Chess Champion, whom many consider to be the greatest chess player of all time.</p>
+			    		<a href="art3.html"><h4>Read More >></h4></a>
+			    	</div>
+			    </div>
+			    <div class="art2">
+			    	<h2>Chess Game</h2>
+			    	<p>Chess is a two-player strategy board game played on a checkered board with 64 squares arranged in an 8×8 grid. Played by millions of people worldwide, chess is believed to be derived from the Indian game chaturanga sometime before the 7th century. Chaturanga is also the likely ancestor of the Eastern strategy games xiangqi (Chinese chess), janggi (Korean chess), and shogi (Japanese chess).</p>
+			    	<a href="art0.html"><h4>Read More >></h4></a>
+                </div>
+            </div>
 			<div class="end HEADER">
 				<div class="b1">Copyright by Mi 2020</div>
 				<div class="b2">Template by: Mateusz Kaczkowski</div>
