--- a/PSI_ZAD/zad_4/index.html
+++ b/PSI_ZAD/zad_4/index.html
@@ -95,7 +95,7 @@
             <input type="checkbox" name="holes" onchange="ShowDamage(event);"><br>
 
             <div id=miningDamage style="display: none;">
-                <label>Liczba odwiertów:</label>
+                <label>Szkody górnicze:</label>
                 <textarea name="miningDamage" disabled></textarea><br><br>
             </div>
 
