--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -16,8 +16,8 @@
         <script src="cell.js"></script>
     </head>
     <body>
-        <canvas id=canvas width=1200 height=800></canvas>
-        <p id=constLog></p>
+        <canvas id=canvas></canvas>
+        <p id=constLog ></p>
         <script src="main.js"></script>
     </body>
-</html>
+</html> 
