--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -13,7 +13,14 @@
         </style>
         <script src="dLib.js"></script>
         <script src="defaultSettings.js"></script>
-        <script src="cell.js"></script>
+        <script src="grid.js"></script>
+        <script src="movement.js"></script>
+
+        <script src="cells/cell.js"></script>
+        <script src="cells/wall.js"></script>
+        <script src="cells/box.js"></script>
+        <script src="cells/mover.js"></script>
+        <script src="cells/rotator.js"></script>
     </head>
     <body>
         <canvas id=canvas></canvas>
