--- a/multiPendulum/index.html
+++ b/multiPendulum/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <canvas id=canvas></canvas>
+    <p id=cLog></p>
     <script src="main.js"></script>
   </body>
 </html>
