cellMachina - place/destroy

--- a/cellMachina/index.html
+++ b/cellMachina/index.html
@@ -21,6 +21,8 @@
         <script src="cells/box.js"></script>
         <script src="cells/mover.js"></script>
         <script src="cells/rotator.js"></script>
+        <script src="cells/placer.js"></script>
+        <script src="cells/destructor.js"></script>
     </head>
     <body>
         <canvas id=canvas></canvas>
